fixed uneven links on header

--- a/resources/css/casestyles.css
+++ b/resources/css/casestyles.css
@@ -257,6 +257,7 @@ video::-webkit-media-controls-current-time-display {
     color: #FFFFFF;
     background: none;
     padding: 16px;
+    padding-bottom: 19px;
     font-size: 28px;
     font-weight: bold;
     font-family: sarabun;
