--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -174,6 +174,7 @@ html, body {
     color: #FFFFFF;
     background: none;
     padding: 16px;
+    padding-bottom: 19px;
     font-size: 28px;
     font-weight: bold;
     font-family: sarabun;
